# tentacle

./: .gitignore  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
conf/: defaults.yml  docker.yml  macos.yml  ubuntu.yml
src/: app.rs  blocking.rs  cfg.rs  constants.rs  data.rs  lib.rs  log_merge.rs  log_streamer.rs  logcodec.rs  logsource.rs  logsource_port.rs  logsource_repo.rs  logsource_svc.rs  logsourceport.rs  logsourcesvc.rs  main.rs  server.rs  state.rs  streamer.rs  util.rs
src/log_source/: file_source.rs  mod.rs
src/repository/: filerepo.rs  mod.rs
tests/: demo.log.1  integrationtests.yml  server_test.rs  support.rs  testconf.yml
