[package]
edition = "2018"
name = "tentacle"
version = "0.1.0"
authors = ["niveau0 <plingplong@t-online.de>", "kodemaniak <carsten@kodemaniak.de>"]
publish = false
description = "Tentacle is the process that provides data for the central logtopus service running somewhere else."
license = "Apache-2.0"

[dependencies]
actix = "0.7" # actor framework
actix-web = "0.7" # web serving
bytes = "0.4"
clap = "2.32" # parse command line options
config = "0.9" # parse config file
log = "0.4" # logging facade
env_logger = "0.6" # log implementation
grok = "1.0" # log parsing
chrono = "0.4" # timestamp parsing
chrono-tz = "0.5" # timezone parsing
failure = "0.1"
futures = "0.1"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
flate2 = "1.0" # decompression
#uuid = { version = "0.7", features = ["v4"] }
#filetime = "0.2"

[dev-dependencies]
lazy_static = "1.3"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tentacle = { path = "/usr/bin/tentacle" }
