[package]
edition = "2018"
name = "tentacle"
version = "0.1.1"
authors = ["niveau0 <plingplong@t-online.de>", "kodemaniak <carsten@kodemaniak.de>"]
publish = false
description = "Tentacle is the process that provides data for the central logtopus service running somewhere else."
license = "Apache-2.0"

[dependencies]
actix = "0.8" # actor framework
actix-web = "1.0" # web serving
bytes = "0.4"
clap = "2.33" # parse command line options
config = "0.9" # parse config file
derive_more = "0.99" # more derive macros
log = "0.4" # logging facade
env_logger = "0.7" # log implementation
grok = "1.0" # log parsing
chrono = "0.4" # timestamp parsing
chrono-tz = "0.5" # timezone parsing
futures = { version = "0.3", features = ["compat"] }
futures-util = "0.3" # combinators
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
flate2 = "1.0" # decompression
#notify = "4.0" # filesystem notification
#uuid = { version = "0.7", features = ["v4"] }
#filetime = "0.2"

[dependencies.futures_01]
version = "0.1.29"
package = "futures"

[dev-dependencies]
lazy_static = "1.4"
awc = "0.2" # http client

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tentacle = { path = "/usr/bin/tentacle" }
